--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-algolia-search": "^0.5.7",
     "gatsby-plugin-manifest": "^2.4.22",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-offline": "^3.2.22",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.25",
@@ -28,6 +29,7 @@
     "gatsby-transformer-sharp": "^2.5.12",
     "gsap": "^3.4.2",
     "lazysizes": "^5.2.2",
+    "netlify-cms-app": "^2.12.19",
     "popper.js": "^1.16.1",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
