--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.24.34",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-algolia-search": "^0.5.7",
+    "gatsby-plugin-feed": "^2.5.11",
     "gatsby-plugin-manifest": "^2.4.22",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-offline": "^3.2.22",
